[package]
edition = "2024"
name = "autoliquid-be"
version = "0.1.0"

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
bcs = "0.1.4"
chrono = {version = "=0.4.39", features = ["clock", "serde"]}
diesel = {version = "2.0", features = ["postgres"]}
diesel-async = {version = "0.5", features = ["postgres", "bb8"]}
fastcrypto = {git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9"}
futures = "0.3.31"
mysten_metrics = {git = "https://github.com/mystenlabs/sui", package = "mysten-metrics"}
prometheus = "0.13.3"
prometheus-http-query = {version = "0.8", default-features = false, features = [
  "rustls-tls",
]}
rand = "0.8.4"
reqwest = {version = "0.12.15", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
shared_crypto = {git = "https://github.com/mystenlabs/sui", package = "shared-crypto"}
sui_data_ingestion_core = {git = "https://github.com/mystenlabs/sui", package = "sui-data-ingestion-core"}
sui_indexer_builder = {git = "https://github.com/mystenlabs/sui", package = "sui-indexer-builder"}
sui_keys = {git = "https://github.com/mystenlabs/sui", package = "sui-keys"}
sui_sdk = {git = "https://github.com/mystenlabs/sui", package = "sui-sdk"}
sui_types = {git = "https://github.com/mystenlabs/sui", package = "sui-types"}
tempfile = "3.3.0"
tokio = {version = "1.0", features = ["full"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
